--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,6 +20,6 @@ jobs:
           npm install
       - name: Publish Pilet
         run: |
-          npx pilet publish --fresh --url https://feed.piral.cloud/api/v1/pilet/my-coding-zone-sample --api-key $PIRAL_FEED_TOKEN
+          npx pilet publish src/index.tsx --fresh --url https://feed.piral.cloud/api/v1/pilet/my-coding-zone-sample --api-key $PIRAL_FEED_TOKEN
         env:
           PIRAL_FEED_TOKEN: ${{ secrets.PIRAL_FEED_TOKEN }}
