--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@my-coding-zone/rxjs",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "The rxjs-fruits.com sample as pilet",
   "keywords": [
     "pilet"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "iframe-resizer": "^4.3.2",
+    "iframe-resizer-react": "^1.1.0"
+  },
   "devDependencies": {
     "my-coding-zone-piral-app": "0.1.0",
     "@types/react": "latest",
@@ -24,7 +27,7 @@
     "@libre/atom": "1.3.3",
     "@dbeining/react-atom": "4.1.21",
     "piral-cli": "^0.14.3",
-    "piral-cli-esbuild": "^0.14.3"
+    "piral-cli-webpack5": "^0.14.3"
   },
   "peerDependencies": {
     "react": "*",
