--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "noImplicitAny": false,
     "removeComments": false,
     "noLib": false,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es6",
